# sandbox-haskell

./: LICENSE  sandbox.cabal
app/: SearchFileFuncional.hs  SearchFileIOM.hs  SearchFileImperative.hs  SearchFile_IO_M.hs
codewars/: io.hs  test.hs
codewars/6kyu/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs
codewars/7kyu/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs
codewars/8kyu/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs
codewars/cw_unsorted/: codewars_01.hs  codewars_02.hs  codewars_03.hs  codewars_04.hs  codewars_05.hs  codewars_06.hs  codewars_07.hs  codewars_08.hs  codewars_09.hs  codewars_10.hs  codewars_11.hs  codewars_12.hs
codewars/exercises/advanced/: infTupTree.hs  orderTree.hs
codewars/exercises/crack/: bruteforcePasswd  bruteforcePasswd.hi  bruteforcePasswd.hs
codewars/exercises/fold/: foldtrie.hs  lagrangeForm.hs  prefixes.hs  rev.hs
codewars/exercises/list/: elem.hs  hasPath.hs  isAsc.hs  nub.hs
src/Lib/Common/: FS.hs  IO.hs  MaybeIO.hs  OS.hs  OrderTree.hs  Pred.hs  TupTree.hs
src/Lib/Monad/: Either.hs  IOEither.hs  IOMaybe.hs  Maybe.hs
src/Lib/Search/: Common.hs  Either.hs  Imperative.hs
storage/: output  search.file
test/: Spec.hs
